<resources>
    <string name="app_name">UID-database</string>
    <string name="action_settings">Settings</string>

    <string name="updata_Setting">添加</string>
    <string name="watch_Setting">查看</string>
    <string name="switch_Setting">切换</string>

    <string name="inputtitlt">序列号</string>
    <string name="inputhint">输入序列号</string>
    <string name="outputtitle">结果</string>
    <string name="outputhint">解密结果</string>
    <string name="copyboard">复制板</string>
    <string name="copyhint">复制内容</string>
    <string name="btncal">解密</string>

    <string name="updateUID">添加UID</string>
    <string name="action_share">Share</string>

    <string name="content_authority">com.example.android.uid_database.app</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_watch">WatchActivity</string>

    <string name="empty_forecast_list">数据为空</string>
    <string name="item_copy">复制</string>
    <string name="item_del">删除</string>
    <string name="addcv">添加</string>
</resources>
